versión final Product Detail

--- a/views/index.html
+++ b/views/index.html
@@ -30,7 +30,7 @@
             </ul>
             <ul class="rigth-navbar">
                 <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
-                <li><a href="/productDetail" class="tienda-botton">Tienda <i class="fas fa-shopping-cart"></i></a></li>
+                <li><a href="/productPage" class="tienda-botton">Tienda <i class="fas fa-shopping-cart"></i></a></li>
             </ul>
         </nav> 
         <div class="secondary-navbar">
