subo archivo styles con conflictos resueltos

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,7 +29,6 @@ a { text-decoration: none;}
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
 }
 
 .main-navbar a {
@@ -43,7 +42,7 @@ a { text-decoration: none;}
   transition-duration: 200ms;
 }
 
-a:hover {
+.main-navbar a:hover {
   color: #ff6200;
   text-shadow: 10px 10px 20px rgb(255, 255, 255);
 }
@@ -59,7 +58,6 @@ a:hover {
 
 .left-navbar {
   display: none;
-
 }
 
 .rigth-navbar {
@@ -177,6 +175,7 @@ a:hover {
   color: #ffffff;
   padding: 5px;
   margin: 5px 5px;
+  
 }
 
 .footer-links a {
@@ -185,8 +184,13 @@ a:hover {
   font-size: 14px;
   padding: 5px;
   margin: 5px 5px;
-  transition-property: color;
-  transition-duration: 200ms;
+  transition-property: color box-shadow;
+  transition-duration: 150ms;
+}
+
+.footer-links a:hover {
+  color: #ff6200;
+  text-shadow: 10px 10px 20px rgb(255, 255, 255);
 }
 
 .footer-social-media {
@@ -206,16 +210,13 @@ a:hover {
   font-size: 14px;
   padding: 5px;
   margin: 5px 5px;
-  transition-property: color;
-  transition-duration: 200ms;
-}
-
-.footer-links a:hover{
-  color: #ff6200;
+  transition-property: color box-shadow;
+  transition-duration: 150ms;
 }
 
 .footer-social-media a:hover {
   color: #ff6200;
+  text-shadow: 10px 10px 20px rgb(255, 255, 255);
 }
 
 .copyright {
@@ -255,10 +256,13 @@ a:hover {
     display: inline-block;  /*convierte las lineas de la lista en bloque para poder darles un padding*/
     font-size: 15px;
     font-weight: 600;
-    transition-property: color box-shadow;
+    transition-property: color, box-shadow;
     transition-duration: 200ms;  
 }
 
+.lg-a:hover {
+  color: #ff6200;
+}
 
 .lg-submit {
   padding: 5px;
@@ -274,12 +278,15 @@ a:hover {
   transition-duration: 200ms;
 }
 
-.lg-submit:hover{
-  background-color: #000000;
+.lg-submit:hover {
   color: #ff6200;
 }
 
+
 /*Pagina Register*/
+
+
+
 
 .rg-form{
     margin: 10px;
@@ -288,41 +295,36 @@ a:hover {
     align-items: center;
 }
 
-.rg-form [type="submit"],[type="reset"]{
-    padding: 5px;
-    margin: 5px;
-    width: 100px;
-    font-family: "Montagu Slab", serif;
-    background-color: #000000;
-    color: #ffda4d;
-    border: none;
-    border-radius: 4px;
-    align-items: right;
-    cursor: pointer;
-    transition-property: color, position;
-    transition-duration: 200ms;
-
-}
-
 .rg-input{
-    margin:4px;
-    padding: 4px;
-    width: 40%;
-    max-width: 300px;
+  margin:4px;
+  padding: 4px;
+  width: 40%;
+  max-width: 300px;
 }
 
-  .rg-btn-div{
-    display: flex;
-    flex-direction: column;
+.rg-form [type="submit"], .rg-form [type="reset"]{
+  padding: 5px;
+  margin: 5px;
+  width: 100px;
+  font-family: "Montagu Slab", serif;
+  background-color: #000000;
+  color: #ffda4d;
+  border: none;
+  border-radius: 4px;
+  align-items: right;
+  cursor: pointer;
+  transition-property: color;
+  transition-duration: 200ms;
+}
 
-  }
-  
-  .rg-form [type="submit"]:hover,[type="reset"]:hover{
-    background-color: #000000;
-    color: #ff6200;
-  }
+.rg-form [type="submit"]:hover,[type="reset"]:hover {
+color: #ff6200;
+}
 
-
+.rg-btn-div{
+  display: flex;
+  flex-direction: column;
+}
 
 /* Página Product Page*/
 
@@ -348,12 +350,15 @@ main h2 .pd-titulo {
 .pd-img-product {
   width: 100%;
 }
+.pc-img-product {
+  width: 100%;
+}
+
 .pd-datos-cerveza {
   border-top: 1px solid #ebebeb;
   text-align: center;
   padding: 15px;
   font-family: "Montagu Slab", serif;
-  margin: 30px auto;
 }
 
 main section article .pd-seleccionar {
@@ -366,140 +371,95 @@ main section article .pd-seleccionar {
   padding: 5px;
 }
 
-/* Fin página Product Page*/
-
-/* Página Product Detail*/
-
-section div .pd-product-form {
-  width: 330px;
-}
-section div .pd-product-form .pd-quantity .pd-counter {
-  justify-content: right;
-  flex-wrap: nowrap;
-  width: 90px;
-}
-section div .pd-product-form .pd-quantity h5 {
-  width: 80px;
-}
-section div .pd-product-form .pd-quantity .quantity-label {
-  width: 160px;
-}
-
-.pd-product-area .pd-product-info .pd-sub-total  {
-  display: flex;
-  flex-direction: row;
-  justify-content: start;
-  align-items: baseline;
-}
-.pd-product-area .pd-product-info .pd-sub-total h5 {
-  margin: 15px;
-}
-
-.pd-product-area div .pd-beer-attributes li {
-  display: flex;
-  flex-direction: row;  
-}
-.pd-product-area div .pd-beer-attributes li p, .pd-product-area div .pd-beer-attributes li h5 {
-  margin:10px;  
-}
-/* Fin página Product Detail*/
-
-.pc-img-product {
-  width: 100%;
-}
+/*Product-Cart*/
 .pc-quantity-label{
-    width: 60px;
+  width: 60px;
 }
 .pc-product-quantity{
-    width: 60px;}
+  width: 60px;}
 .pc-quantity-label-det{
-    width: 130px;}
+  width: 130px;}
 .pc-quantity-label-det{
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
-
 .pc-product-cantidad {
-    width: 150px;
+  width: 150px;
 }
 .fas fa-minus {
-    margin-top:10px ;
+  margin-top:10px ;
 }
 
 .pc-product-group{
-    display: flex;
+  display: flex;
 }
 .pc-product-quantity{
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 .pc-product-cantidad,
-  .pc-product {
-    flex-direction: column;
-  }
+.pc-product {
+  flex-direction: column;
+}
 .pc-product-label{
-  width: 250px;
-  margin: 15px auto;
-  padding: 0 10px;}
-  .pc-botton-inv{
-      height: 12px;
-  }
+width: 250px;
+margin: 15px auto;
+padding: 0 10px;}
+.pc-botton-inv{
+    height: 12px;
+}
 
-  .pc-label-envio{
-      text-align: right;
-      margin-right: 20px;
-  }
+.pc-label-envio{
+    text-align: right;
+    margin-right: 20px;
+}
 
 .pc-options {
-    display: flex;
-    flex-direction: row-reverse;
-    margin-bottom: 15px ;
-  }
-  .pc-label-envio{
+  display: flex;
+  flex-direction: row-reverse;
+  margin-bottom: 15px ;
+}
+.pc-label-envio{
+  margin-right:5px ;
+}
+.pc-label-envio-direccion{
+  font-weight: bold;
+  margin-right: 75px;
+}
+.pc-txtLabel-totalenvio{
+  font-weight: bold;
+}
+
+.pc-label-totalenvio{
     margin-right:5px ;
-  }
+}
 
-  .pc-label-envio-direccion{
-    font-weight: bold;
-    margin-right: 75px;
-  }
-  .pc-txtLabel-totalenvio{
-    font-weight: bold;
-  }
+.pc-options-button {
+  padding: 5px;
+  margin: 5px 25px;
+  font-family: "Montagu Slab", serif;
+  background-color: #000000;
+  color: #ffda4d;
+  border: none;
+  border-radius: 4px;
+  align-items: right;
+  cursor: pointer;
+}
+.pc-bottom-content{
+    display: flex;
+    flex-direction: column;
+}
 
-  .pc-label-totalenvio{
-      margin-right:5px ;
-  }
-  
-  .pc-options-button {
-    padding: 5px;
-    margin: 5px 25px;
-    font-family: "Montagu Slab", serif;
-    background-color: #000000;
-    color: #ffda4d;
-    border: none;
-    border-radius: 4px;
-    align-items: right;
-    cursor: pointer;
-  }
-  .pc-bottom-content{
-      display: flex;
-      flex-direction: column;
-  }
-  
-  .pc-label-total-group{
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-      margin: 0 20px 30px 0;
-  }
+.pc-label-total-group{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin: 0 20px 30px 0;
+}
 
 /*#########################################################################################/*/
 /*################## MEDIA 361  ############################################/*/
 /*#########################################################################################/*/
 
 @media (min-width: 361px) {
-.pc-options-button{
-    margin-bottom: 0 20px 0 0;
-}
 
  .main-header-top-bar {
     display: flex;
@@ -549,14 +509,11 @@ section div .pd-product-form .pd-quantity .quantity-label {
   .suscribe-bar {
     width: 50%;
   }
-
-
+  
   /*Register*/
-
   .rg-btn-div{
     flex-direction: row;
   }
-
   /* Página Product Page*/
 
   .pack-customized,
@@ -574,10 +531,6 @@ section div .pd-product-form .pd-quantity .quantity-label {
   main .pd-titulo {
     margin: 20px;
   }
-
-
-
-
 
   /* Página Product Detail*/
 
@@ -645,38 +598,6 @@ section div .pd-product-form .pd-quantity .quantity-label {
     align-items: flex-start;
   }
 
-  .pc-product-carrito {
-    margin: 15px auto;
-    padding: 0 10px;
-  }
-
-  .pc-product-cantidad {
-    margin: 15px auto;
-    padding: 0 10px;
-  }
-  .pc-product-precio {
-    margin: 15px auto;
-    padding: 0 10px;
-  }
-  .pc-eliminar {
-    margin: 80px auto;
-    padding: 0 10px;
-    height: fit-content;
-  }
-
-  .pc-cart {
-    display: flex;
-    /*justify-content: space-between;
-        /*flex-direction: column;
-        flex-wrap: nowrap;*/
-  }
-  
-  .pc-product-label{
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-  }
-
   section div .pd-product-form .pd-quantity {
     display: flex;
     flex-direction: row;
@@ -687,7 +608,10 @@ section div .pd-product-form .pd-quantity .quantity-label {
     flex-wrap: nowrap;
   }
 
-  
+  section div .pd-product-form .pd-quantity .pd-counter {
+    justify-content: center;
+    flex-wrap: nowrap;
+  }
   section div .pd-product-form .pd-quantity .quantity-label {
     align-items: start;
   }
@@ -789,7 +713,6 @@ section.ind-top {
   border-top: 2px #949494 solid;
 }
 
-
 div.reel-1,
 div.reel-2,
 div.reel-3,
@@ -799,16 +722,6 @@ div.reel-4 {
   margin: 10px 5px;
   max-height: 200px;
 }
-
-.pc-cart {
-    display: flex;
-    flex-wrap: wrap; /*REVISAR ESTO DEL REEL*/
-    justify-content: space-evenly;
-    width: 100%;
-    margin-top: 5px;
-    border-bottom: 5px #949494 solid;
-    border-top: 2px #949494 solid;
-  }
   /*seccion Media*/
   body.ind-body {
     background-color: #eeede1a8;
@@ -919,40 +832,20 @@ div.reel-4 {
   }
 
 /* section middle-bootom*/
-section .bottom-content{
+section.bottom-content{
   display: flex;
   border-bottom: 5px #949494 solid;
   margin: 40px 10px;
   justify-content: center;
-  padding: 30px;
-
 }
-div .bottom-content{
+div.bottom-content{
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 20px;
   justify-content: space-evenly;
   width: 95%;
 
-  
 }
-/*CREO QUE ACA ESTA EL ERROR
-section.pc-bottom-content{
-  display: flex;
-  border-bottom: 5px #949494 solid;
-  margin: 40px 10px;
-  justify-content: center;
-  padding: 30px;
-
-}
-div.pc-bottom-content{
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 20px;
-  justify-content: space-evenly;
-  width: 95%;  
-}*/
-
 
   article.art-2 {
     display: flex;
@@ -1019,9 +912,70 @@ div.pc-bottom-content{
     text-shadow: 10px 10px 20px rgb(255, 255, 255, 0.8);
     transform: scale(98%);
   }
+/*Product-Cart MEDIA 361*/
+  .pc-options-button{
+    margin-bottom: 0 20px 0 0;
+  } 
 
+  .pc-product-carrito {
+    margin: 15px auto;
+    padding: 0 10px;
+  }
+
+  .pc-product-cantidad {
+    margin: 15px auto;
+    padding: 0 10px;
+  }
+  .pc-product-precio {
+    margin: 15px auto;
+    padding: 0 10px;
+  }
+  .pc-eliminar {
+    margin: 15px auto;
+    padding: 0 10px;
+    height: fit-content;
+  }
+
+  .pc-cart {
+    display: flex;
+    /*justify-content: space-between;
+        /*flex-direction: column;
+        flex-wrap: nowrap;*/
+  }
+
+  .pc-product-label{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+
+  .pc-cart {
+    display: flex;
+    flex-wrap: wrap; /*REVISAR ESTO DEL REEL*/
+    justify-content: space-evenly;
+    width: 100%;
+    margin-top: 5px;
+    border-bottom: 5px #949494 solid;
+    border-top: 2px #949494 solid;
+  }
+
+  .pc-bottom-content{
+    display: flex;
+    border-bottom: 5px #949494 solid;
+    margin: 40px 10px;
+    justify-content: center;
+    padding: 30px;
+  
+  }
+
+  .pc-bottom-content{
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
 
 }
+
+
     
 /*#########################################################################################/*/
 /*############# MEDIA 760  ############################################/*/
@@ -1088,6 +1042,7 @@ div.pc-bottom-content{
   .pc-product {
     display: flex;
     justify-content: space-between;
+    flex-direction: column;
     /*flex-wrap: wrap;*/
   }
 
@@ -1099,7 +1054,7 @@ div.pc-bottom-content{
   .pc-product-cantidad-combinada {
     display: flex;
     justify-content: space-between;
-    justify-content: center;
+    /*align-items: center;*/
   }
 
 
@@ -1160,6 +1115,7 @@ article.art-3 {
 
 div.bottom-content{
   width: 90%;
+
 }
 
 article.art-2 {
@@ -1235,12 +1191,10 @@ article.art-5 {
     margin: 30px;
   }
 
-  .pd-main .pd-tienda {
+  main .pd-tienda {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    max-width: 1200px;
-    margin: auto;
   }
   main .pd-titulo {
     margin: 20px;
