--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -76,7 +76,7 @@
             </ul>
 
             <h4>Tu selección</h4>
-            <div>
+            <div class="pd-product-form-container">
                 <form class="pd-product-form">
 
                     <div class="pd-quantity">
@@ -84,7 +84,7 @@
                                 value="botella500">Botella 500 ml</label>
                         <div class="pd-counter">
                             <input type="button" id="decrease" value="-" class="minus">
-                            <input type="number" class="product-quantity" step="1" min="1" max="17" name="quantity"
+                            <input type="number" class="product-quantity" step="1" min="0" max="17" name="quantity"
                                 value="0" title="Cantidad" size="4" placeholder="" inputmode="numeric">
                             <input type="button" id="increase" value="+" class="plus">
                         </div>
@@ -98,7 +98,7 @@
                         <div class="pd-counter">
                             <input type="button" id="decrease" value="-" class="minus">
                             <input type="number" class="product-quantity" step="1" min="0" max="17" name="quantity"
-                                value="1" title="Cantidad" size="4" placeholder="" inputmode="numeric">
+                                value="0" title="Cantidad" size="4" placeholder="" inputmode="numeric">
                             <input type="button" id="increase" value="+" class="plus">
                         </div>
                         <h5>$ 600</h5>
@@ -109,7 +109,7 @@
                         <div class="pd-counter">
                             <input type="button" id="decrease" value="-" class="minus">
                             <input type="number" class="product-quantity" step="1" min="0" max="17" name="quantity"
-                                value="1" title="Cantidad" size="4" placeholder="" inputmode="numeric">
+                                value="0" title="Cantidad" size="4" placeholder="" inputmode="numeric">
                             <input type="button" id="increase" value="+" class="plus">
                         </div>
                         <h5>$ 1700</h5>
@@ -120,7 +120,7 @@
                         <div class="pd-counter">
                             <input type="button" id="decrease" value="-" class="minus">
                             <input type="number" class="product-quantity" step="1" min="0" max="17" name="quantity"
-                                value="1" title="Cantidad" size="4" placeholder="" inputmode="numeric">
+                                value="0" title="Cantidad" size="4" placeholder="" inputmode="numeric">
                             <input type="button" id="increase" value="+" class="plus">
                         </div>
                         <h5>$ 3500</h5>
