--- a/views/productPage.html
+++ b/views/productPage.html
@@ -84,7 +84,7 @@
                 <div class="pd-datos-cerveza">
                     <h4>Stout</h4>
                     <h4>$ 200</h4>
-                    <button class="pd-seleccionar">Seleccionar</button>
+                    <button class="pd-seleccionar"><a href="/productDetail">Seleccionar</a></button>
                 </div>
             </article>
 
