modifica header para que se pueda acceder al pc desde todas las vistas

--- a/views/index.html
+++ b/views/index.html
@@ -30,7 +30,10 @@
             </ul>
             <ul class="rigth-navbar">
                 <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
-                <li><a href="/productPage" class="tienda-botton">Tienda <i class="fas fa-shopping-cart"></i></a></li>
+                <div class="pd-pc-links">
+                    <a href="/productDetail" class="tienda-botton">Tienda</a>
+                    <a href="/productCart"><i class="fas fa-shopping-cart"></i></a>
+                </div>
             </ul>
         </nav> 
         <div class="secondary-navbar">
