--- a/views/login.html
+++ b/views/login.html
@@ -23,7 +23,13 @@
             </ul>
             <ul class="rigth-navbar">
                 <li><a href="/login.html">Ingresá  <i class="fas fa-sign-in-alt"></i></a></li>
-                <li><a href="/productDetail" class="tienda-botton">Tienda<i class="fas fa-shopping-cart"></i></a></li>
+                <li>
+                    <div class="pd-pc-links">
+                        <a href="/productDetail" class="tienda-botton">Tienda</a>
+                        <a href="/productCart"><i class="fas fa-shopping-cart"></i></a>
+                    </div>
+                </li>
+                
             </ul>
         </nav> 
         <div class="secondary-navbar">
