--- a/views/login.html
+++ b/views/login.html
@@ -17,19 +17,18 @@
             <img src="/Desing/Logo-Etiqueta-Originals/540x540sqr.png" class="logo">
             <ul class="left-navbar">                
                 <li><a href="/">Home </a></li>
-                <li><a href="">Quienes somos </a></li>
-                <li><a href="/productPage">Nuestras Recetas </a></li>
-                <li><a href="">Contactanos </a></li>
+                <li><a href="/notFound">Quienes somos </a></li>
+                <li><a href="/notFound">Nuestras Recetas </a></li>
+                <li><a href="/notFound">Contactanos </a></li>
             </ul>
             <ul class="rigth-navbar">
-                <li><a href="/login.html">Ingresá  <i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
                 <li>
                     <div class="pd-pc-links">
-                        <a href="/productDetail" class="tienda-botton">Tienda</a>
+                        <a href="/productPage" class="tienda-botton">Tienda</a>
                         <a href="/productCart"><i class="fas fa-shopping-cart"></i></a>
                     </div>
                 </li>
-                
             </ul>
         </nav> 
         <div class="secondary-navbar">
@@ -50,12 +49,12 @@
     <section>
         <div class="lg-div-form">
             <div class="lg-div-login">
-                <button><i class="fa-brands fa-google"> Ingresar con Google </i></button>
-                <button><i class="fa-brands fa-facebook-f"> Ingresar con Facebook </i></button>
+                <button class="lg-button"><i class="fa-brands fa-google"> Ingresar con Google </i></button>
+                <button class="lg-button"><i class="fa-brands fa-facebook-f"> Ingresar con Facebook </i></button>
             </div>
             <form action="" class="lg-form-login">
-                <input type="text" placeholder="Email">
-                <input type="text" placeholder="Contraseña">
+                <input type="text" class="lg-input" placeholder="Email">
+                <input type="text" class="lg-input" placeholder="Contraseña">
                 <button type="submit" class="lg-submit">Ingresar</button>
             </form>
             <h4>¿No tenes cuenta?</h4>
