--- a/views/register.html
+++ b/views/register.html
@@ -17,16 +17,18 @@
             <img src="/Desing/Logo-Etiqueta-Originals/540x540sqr.png" class="logo">
             <ul class="left-navbar">                
                 <li><a href="/">Home </a></li>
-                <li><a href="">Quienes somos </a></li>
-                <li><a href="/productPage">Nuestras Recetas </a></li>
-                <li><a href="">Contactanos </a></li>
+                <li><a href="/notFound">Quienes somos </a></li>
+                <li><a href="/notFound">Nuestras Recetas </a></li>
+                <li><a href="/notFound">Contactanos </a></li>
             </ul>
             <ul class="rigth-navbar">
-                <li><a href="/login">Ingresá  <i class="fas fa-sign-in-alt"></i></a></li>
-                <div class="pd-pc-links">
-                    <a href="/productDetail" class="tienda-botton">Tienda</a>
-                    <a href="/productCart"><i class="fas fa-shopping-cart"></i></a>
-                </div>            
+                <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                <li>
+                    <div class="pd-pc-links">
+                        <a href="/productPage" class="tienda-botton">Tienda</a>
+                        <a href="/productCart"><i class="fas fa-shopping-cart"></i></a>
+                    </div>
+                </li>
             </ul>
         </nav> 
         <div class="secondary-navbar">
